--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kucoin-api",
-  "version": "0.0.3",
+  "name": "kucoin-api-jc",
+  "version": "0.1.0",
   "description": "Node.js client for the KuCoin API",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:Satoshinaire/kucoin-api.git"
+    "url": "git@github.com:josecabral/kucoin-api.git"
   },
   "bugs": {
     "url": "https://github.com/Satoshinaire/kucoin-api/issues"
