--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kucoin-api-jc",
+  "name": "kucoin-api",
   "version": "0.1.0",
   "description": "Node.js client for the KuCoin API",
   "main": "index.js",
